fix header and footer on smallest screens

--- a/src/components/UI/button/button.module.scss
+++ b/src/components/UI/button/button.module.scss
@@ -58,3 +58,9 @@
 		}
 	}
 }
+
+@include whenSmall {
+	.button {
+		font-size: $font-size-18;
+	}
+}
