--- a/src/components/global/footer/footer.module.scss
+++ b/src/components/global/footer/footer.module.scss
@@ -71,6 +71,9 @@
 @include whenMedium {
 	.nav a {
 		font-size: $font-size-20;
+		&:first-of-type {
+			margin-left: 0;
+		}
 	}
 
 	.smallText {
@@ -95,5 +98,13 @@
 	.footer {
 		padding-top: 15rem;
 		padding-bottom: 6rem;
+	}
+
+	.nav a {
+		font-size: $font-size-18;
+		margin-left: 1.6rem;
+		&:first-of-type {
+			margin-left: 0;
+		}
 	}
 }
