--- a/src/components/home/5_services/services.module.scss
+++ b/src/components/home/5_services/services.module.scss
@@ -79,6 +79,15 @@
 	.imagesContainer {
 		margin-bottom: 4.5rem !important;
 	}
+
+	.buttonsContainer,
+	.excerptContainer {
+		padding-right: 0;
+	}
+
+	.buttonsContainer {
+		margin-bottom: 0 !important;
+	}
 }
 
 @include whenSmall {
@@ -92,5 +101,11 @@
 
 	.excerpt {
 		font-size: $font-size-20;
+	}
+
+	.imagesContainer,
+	.marginBottom,
+	.button {
+		margin-bottom: 3rem !important;
 	}
 }
